# Clifford

./: .gitignore  CMakeCache.txt  CMakeLists.txt  testconst.cpp
generator/: argumentparser.py  blades.py  d  test.cpp
include/cliff/: c3_0.hpp
scripts/: c3_0_blades.py  c_operations.py
src/generators/cliff/: argumentparser.py  argumentparser.py~  blades.py  c3_0.hpp  cliff_generator.py  clifford.py  d  test.cpp  test.cpp~
test/: CMakeLists.txt
test/cliff/: CMakeLists.txt  testcliff.cpp
